Fix Cart price calculations RTE
Sync with `upstream` - styles.css, Routes, home.html, customerList.html
Fix RTEs with PriceCalculator

--- a/client/src/zza/customer/tmpl/customerList.html
+++ b/client/src/zza/customer/tmpl/customerList.html
@@ -4,7 +4,8 @@
     </div>
     <div data-ng-hide="vm.isLoading">
         <p>
-            <input type="text" class="input-small search-query" data-ng-model="vm.customerFilterText" />
+            <input type="text" class="input-small search-query" autofocus placeholder="Filter"
+                   data-ng-model="vm.customerFilterText" />
         </p>
 
         <ul class="nav nav-list">
