--- a/client/src/zza/menu/tmpl/menu.html
+++ b/client/src/zza/menu/tmpl/menu.html
@@ -6,7 +6,7 @@
         </div>
 
         <div class="span9">
-            <div data-ng-controller="MenuController as vm">
+            <div data-ng-controller="ProductController as vm">
                 <div data-ng-include="vm.template"></div>
             </div>
         </div>
