--- a/client/src/zza/menu/tmpl/menu.drink.html
+++ b/client/src/zza/menu/tmpl/menu.drink.html
@@ -4,12 +4,12 @@
     <div>
         <div class="row-fluid" data-ng-repeat="product in vm.products" >
             <div class="span3">
-                <a data-ng-href="{{vm.productRef(product)}}">
+                <a data-ng-click="vm.go(product)" class="hand">
                     <img data-product-img-src="{{product.image}}" />
                 </a>
             </div>
             <div class="span9">
-                <h3><a data-ng-href="{{vm.productRef(product)}}">{{product.name}}</a></h3>
+                <h3><a data-ng-click="vm.go(product)" class="hand">{{product.name}}</a> &nbsp;</h3>
                 <p>{{product.description}}</p>
             </div>
             <hr />
