--- a/client/src/zza/order/tmpl/orderItem.html
+++ b/client/src/zza/order/tmpl/orderItem.html
@@ -9,7 +9,7 @@
         <form class="form-horizontal">
             <table class="table-condensed control-group">
                 <tr><th style="min-width: 160px">Size</th><th>Price</th></tr>
-                <tr data-ng-repeat="svm in vm.sizeVms">
+                <tr data-ng-repeat="svm in vm.sizes">
                     <td><label class="radio" for="size{{svm.id}}">{{svm.name}}</label> </td>
                     <td><label class="radio" for="size{{svm.id}}">
                             <input type="radio" data-ng-model="vm.orderItem.productSizeId"
@@ -33,7 +33,7 @@
             </div>
 
             <tabset>
-                <tab data-ng-repeat="tab in vm.typeVms" heading="{{tab.title}}">
+                <tab data-ng-repeat="tab in vm.optionTypes" heading="{{tab.title}}">
                     <p data-ng-show="tab.allFree" class="optionMessage">These choices are all free! Enjoy!</p>
                     <p data-ng-show="tab.someCostMore" class="optionMessage">Choices with an (*) after the name count as 2.</p>
                     <div data-ng-include="tab.choiceTemplate"></div>
