Fixed Product Options tabs & added graphics to HTML
Fixed Options tabs for OrderItem and Product views
- Implemented OptionGroupsService to group options by type
Updated use of `define()` to be consistent
Added graphics to About and Home pages

--- a/client/src/zza/app/tmpl/about.html
+++ b/client/src/zza/app/tmpl/about.html
@@ -1,1 +1,12 @@
-﻿<h2>About Zza!</h2>
+﻿<div class="about">
+
+    <div class="container">
+        <div class="text-center" style="padding-top:50px;">
+            <img src="./assets/images/ideablade.gif" />
+        </div>
+        <div class="text-center" style="padding-top:50px;">
+            <img src="./assets/images/breezeIntro.png" />
+        </div>
+    </div>
+
+</div>
