Fix to Cart order item options
Enhanced Zza logo and used within Welcome.html
Fixed order item options listings in Cart view
ProductService::loadAllLookups() now uses `session.lookups` if available.

--- a/client/src/zza/order/tmpl/cart.html
+++ b/client/src/zza/order/tmpl/cart.html
@@ -18,7 +18,7 @@
                 </tr>
                 <tr class="narrow" data-ng-repeat="option in item.orderItemOptions">
                     <td></td>
-                    <td>{{option.productOption.name}}</td>
+                    <td>{{option.name}}</td>
                     <td></td>
                     <td></td>
                     <td>{{option.price | currency}}</td>
