--- a/client/src/zza/app/tmpl/welcome.html
+++ b/client/src/zza/app/tmpl/welcome.html
@@ -2,4 +2,7 @@
     <div class="text-center" style="padding-top:50px;">
         <img src="./assets/images/logo.png" />
     </div>
+    <div class="text-center">
+        <img src="./assets/images/builtWith.png" />
+    </div>
 </div>
