--- a/client/src/zza/order/tmpl/order.html
+++ b/client/src/zza/order/tmpl/order.html
@@ -2,7 +2,7 @@
     <div class="row-fluid" >
 
         <div class="span3">
-             <div ui-view="orderSidebar"></div>
+             <div ui-view="sidebar"></div>
         </div>
 
         <div class="span9">
