--- a/client/src/zza/menu/tmpl/menu.salad.html
+++ b/client/src/zza/menu/tmpl/menu.salad.html
@@ -4,10 +4,10 @@
     <div>
         <div class="row-fluid" data-ng-repeat="product in vm.products" >
             <div class="span3">
-                <img data-ng-click="vm.go(product)" class="img-polaroid hand" data-product-img-src="{{product.image}}" />
+                <img data-ng-click="vm.showDetails(product)" class="img-polaroid hand" data-product-img-src="{{product.image}}" />
             </div>
             <div class="span9">
-                <h3><a data-ng-click="vm.go(product)" class="hand">{{product.name}}</a></h3>
+                <h3><a data-ng-click="vm.showDetails(product)" class="hand">{{product.name}}</a></h3>
                 <p>{{product.description}}</p>
             </div>
             <hr />
