--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
         <link href="./assets/css/bootstrap.min.css"             rel="stylesheet" />
         <link href="./assets/css/bootstrap-responsive.min.css"  rel="stylesheet" />
         <link href="./vendor/toastr/toastr.css"                 rel="stylesheet" />
+        <link href="./assets/css/animate.css"                   rel="stylesheet" />
         <link href="./assets/css/styles.css"                    rel="stylesheet" />
 
     </head>
