Added Page and sidebar animations

--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
     <body class="ng-cloak" data-ng-controller="SessionController as vm">
 
         <div ui-view="header"></div>
-        <div ui-view="content" id="shell-content" >
+        <div ui-view="content" id="shell-content" class="page page-animated">
             <!--
                 Dynamic content area for the SPA
             -->
