Finished animations for content, lists, and orders.
Partititioned CSS3 animations into distinct `animations.css` file
Animations now available for content changes, customer filters, customer orders lists, sidebar containers, sidebar lists, and order content areas.

--- a/client/src/zza/customer/tmpl/customerList.html
+++ b/client/src/zza/customer/tmpl/customerList.html
@@ -13,7 +13,7 @@
 
         <ul class="nav nav-list">
 
-            <li class="customers-animate"
+            <li class="customers animated"
                 data-ng-class="{active: vm.isSelected(customer)}"
                 data-ng-repeat="customer in vm.customers | filter:vm.filteredByName track by customer.id"  >
 
