--- a/client/index.html
+++ b/client/index.html
@@ -13,16 +13,16 @@
         <link href="./assets/css/bootstrap.min.css"             rel="stylesheet" />
         <link href="./assets/css/bootstrap-responsive.min.css"  rel="stylesheet" />
         <link href="./vendor/toastr/toastr.css"                 rel="stylesheet" />
-        <link href="./assets/css/animate.css"                   rel="stylesheet" />
         <link href="./assets/css/styles.css"                    rel="stylesheet" />
+        <link href="./assets/css/animations.css"                rel="stylesheet" />
 
     </head>
 
 
-    <body class="ng-cloak" data-ng-controller="SessionController as vm">
+    <body class="ng-cloak" data-ng-controller="SessionController as vm" >
 
         <div ui-view="header"></div>
-        <div ui-view="content" id="shell-content" class="page page-animated">
+        <div ui-view="content" class="content animated">
             <!--
                 Dynamic content area for the SPA
             -->
