--- a/client/src/zza/order/tmpl/order.html
+++ b/client/src/zza/order/tmpl/order.html
@@ -6,7 +6,7 @@
         </div>
 
         <div class="span9">
-            <div ui-view="content"></div>
+            <div ui-view="content" class="products animated" ></div>
         </div>
 
     </div>
