Added config to deploy
Fixed `logger` RTE in Lookups.js
Added styling to customer loading indicators; fixed loading indicator for customer list

--- a/client/src/zza/customer/tmpl/customerDetail.html
+++ b/client/src/zza/customer/tmpl/customerDetail.html
@@ -6,7 +6,7 @@
         <b>Address:</b> {{vm.selectedCustomer.address.street}}, {{vm.selectedCustomer.address.city}},
         {{vm.selectedCustomer.address.state}} {{vm.selectedCustomer.address.zip}}</p>
         <hr/>
-        <div data-ng-show="vm.isLoadingOrders">
+        <div data-ng-show="vm.isLoadingOrders" class="loading">
             <h2>Loading orders ... </h2>
         </div>
         <div data-ng-hide="vm.isLoadingOrders">
