--- a/client/src/zza/customer/tmpl/customerList.html
+++ b/client/src/zza/customer/tmpl/customerList.html
@@ -1,8 +1,8 @@
 <div class="well animate">
-    <div data-ng-show="vm.isLoading">
+    <div data-ng-show="vm.isLoadingCustomers" class="loading">
         <h2>Loading customers ... </h2>
     </div>
-    <div data-ng-hide="vm.isLoading">
+    <div data-ng-hide="vm.isLoadingCustomers">
         <p>
             <input type="search"
                    class="input-small search-query"
